--- a/lecm-contracts-fake/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts-fake/contracts-fake_ru.properties
+++ b/lecm-contracts-fake/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts-fake/contracts-fake_ru.properties
@@ -8,3 +8,7 @@ button.lecm-contract-fake_document.new=\u041D\u043E\u0432\u044B\u0439 \u0414\u04
 label.create-lecm-contract-fake_document=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0414\u043E\u0433\u043E\u0432\u043E\u0440 (Fake)
 label.filter-lecm-contract-fake_document=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430 (Fake)
 
+label.tab1=\u0410\u0442\u0440\u0438\u0431\u0443\u0442\u044B
+label.tab2=\u0422\u0430\u0431\u043B\u0438\u0447\u043D\u043E\u0435 \u043F\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u043B\u0435\u043D\u0438\u0435
+label.tab3=\u0422\u0430\u0431\u043B\u0438\u0447\u043D\u043E\u0435 \u043F\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u043B\u0435\u043D\u0438\u0435
+
