--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-table-structure-model_ru.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-table-structure-model_ru.properties
@@ -12,3 +12,5 @@ lecm-contract-table-structure_model.association.lecm-contract-table-structure_re
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_responsible-assoc.description=\u041E\u0442\u0432\u0435\u0442\u0441\u0442\u0432\u0435\u043D\u043D\u044B\u0439
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_tableDataRow-assoc.title=\u042D\u0442\u0430\u043F\u044B \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_tableDataRow-assoc.description=\u042D\u0442\u0430\u043F\u044B \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
+lecm-contract-table-structure_model.association.lecm-contract-table-structure_attachments-temp-assoc.title=\u0412\u043B\u043E\u0436\u0435\u043D\u0438\u0435
+lecm-contract-table-structure_model.association.lecm-contract-table-structure_attachments-temp-assoc.description=\u0412\u043B\u043E\u0436\u0435\u043D\u0438\u0435
