--- a/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts_ru.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts_ru.properties
@@ -67,3 +67,5 @@ contract.contractAdditionalDocumentCancel.baseOnDocument=\u041E\u0441\u043D\u043
 
 label.contracts.stage=\u042D\u0442\u0430\u043F\u044B \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 label.contracts.main=\u0410\u0442\u0440\u0438\u0431\u0443\u0442\u044B
+
+label.contracts.attachments=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430 > \u0412\u043B\u043E\u0436\u0435\u043D\u0438\u044F
