--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/history/datagrid/history.datagrid.get_ru.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/history/datagrid/history.datagrid.get_ru.properties
@@ -1,1 +1,2 @@
-logicecm.base.show-arhive.label=\u0421\u043C\u043E\u0442\u0440\u0435\u0442\u044C \u0443\u043F\u043E\u043C\u0438\u043D\u0430\u043D\u0438\u044F
+logicecm.base.show-secondary.label=\u0421\u043C\u043E\u0442\u0440\u0435\u0442\u044C \u0443\u043F\u043E\u043C\u0438\u043D\u0430\u043D\u0438\u044F
+logicecm.base.show-arhive.label=\u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0430\u0440\u0445\u0438\u0432\u043D\u044B\u0435
