--- a/lecm-documents/repo/src/main/config/messages/lecm-documents_ru.properties
+++ b/lecm-documents/repo/src/main/config/messages/lecm-documents_ru.properties
@@ -26,6 +26,11 @@ lecm-doc-members_model.property.lecm-doc-members_group.description=\u0413\u0440\
 lecm-doc-members_model.association.lecm-doc-members_employee-assoc.title=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A
 lecm-doc-members_model.association.lecm-doc-members_employee-assoc.description=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A
 
+lecm-document_model.type.lecm-document_tableDataRow.title=\u0422\u0430\u0431\u043B\u0438\u0447\u043D\u0430\u044F \u0437\u0430\u043F\u0438\u0441\u044C
+lecm-document_model.type.lecm-document_tableDataRow.description=\u0422\u0430\u0431\u043B\u0438\u0447\u043D\u0430\u044F \u0437\u0430\u043F\u0438\u0441\u044C
+lecm-document_model.property.lecm-document_indexTableRow.title=\u0418\u043D\u0434\u0435\u043A\u0441
+lecm-document_model.property.lecm-document_indexTableRow.description=\u0418\u043D\u0434\u0435\u043A\u0441
+
 statemachine.state.privileges.INITIATOR=\u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440
 statemachine.state.privileges.CORRECTOR=\u041A\u043E\u0440\u0440\u0435\u043A\u0442\u043E\u0440
 statemachine.state.privileges.READER=\u0427\u0438\u0442\u0430\u0442\u0435\u043B\u044C
