--- a/lecm-reports-editor/repo/src/main/config/messages/reports-editor_ru.properties
+++ b/lecm-reports-editor/repo/src/main/config/messages/reports-editor_ru.properties
@@ -69,8 +69,8 @@ lecm-rpeditor_model.property.lecm-rpeditor_reportQueryLimit.title=QueryLimit
 lecm-rpeditor_model.property.lecm-rpeditor_reportQueryLimit.description=QueryLimit
 lecm-rpeditor_model.property.lecm-rpeditor_reportQueryPgSize.title=QueryPgSize
 lecm-rpeditor_model.property.lecm-rpeditor_reportQueryPgSize.description=QueryPgSize
-lecm-rpeditor_model.property.lecm-rpeditor_reportExtFlags.title=ExtFlags
-lecm-rpeditor_model.property.lecm-rpeditor_reportExtFlags.description=ExtFlags
+lecm-rpeditor_model.property.lecm-rpeditor_reportExtFlags.title=\u0414\u043E\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044C\u043D\u044B\u0435 \u043F\u0430\u0440\u0430\u043C\u0435\u0442\u0440\u044B
+lecm-rpeditor_model.property.lecm-rpeditor_reportExtFlags.description=\u0414\u043E\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044C\u043D\u044B\u0435 \u043F\u0430\u0440\u0430\u043C\u0435\u0442\u0440\u044B
 lecm-rpeditor_model.association.lecm-rpeditor_reportTypeAssoc.title=\u0422\u0438\u043F
 lecm-rpeditor_model.association.lecm-rpeditor_reportTypeAssoc.description=\u0422\u0438\u043F \u043E\u0442\u0447\u0435\u0442\u0430
 lecm-rpeditor_model.association.lecm-rpeditor_reportProviderAssoc.title=\u041F\u0440\u043E\u0432\u0430\u0439\u0434\u0435\u0440
