--- a/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/menu/reports-editor.menu.get_ru.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/menu/reports-editor.menu.get_ru.properties
@@ -3,6 +3,7 @@ lecm.reports-editor.report-info.btn=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u
 lecm.reports-editor.addSource.btn=\u0412\u044B\u0431\u043E\u0440 \u041D\u0430\u0431\u043E\u0440 \u0414\u0430\u043D\u043D\u044B\u0445
 lecm.reports-editor.editSource.btn=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0430 \u041D\u0430\u0431\u043E\u0440\u0430 \u0414\u0430\u043D\u043D\u044B\u0445
 lecm.reports-editor.editTemplate.btn=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0430 \u0448\u0430\u0431\u043B\u043E\u043D\u0430
+lecm.reports-editor.subReports.btn=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0430 \u0432\u043B\u043E\u0436\u0435\u043D\u043D\u044B\u0445 \u043E\u0442\u0447\u0435\u0442\u043E\u0432
 lecm.reports-editor.templates.btn=\u0428\u0430\u0431\u043B\u043E\u043D\u044B
 lecm.reports-editor.sources.btn=\u041D\u0430\u0431\u043E\u0440\u044B \u0414\u0430\u043D\u043D\u044B\u0445
 lecm.reports-editor.reportTypes.btn=\u0422\u0438\u043F\u044B \u043E\u0442\u0447\u0435\u0442\u043E\u0432
