--- a/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form_ru.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form_ru.properties
@@ -1,4 +1,6 @@
 label.report.displayName=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
+label.subReport.type=\u0422\u0438\u043F \u044D\u043B\u0435\u043C\u0435\u043D\u0442\u043E\u0432
+label.subReport.source=\u0418\u0441\u0442\u043E\u0447\u043D\u0438\u043A \u0434\u0430\u043D\u043D\u044B\u0445
 
 page.lecm.reports-editor=\u0420\u0435\u0434\u0430\u043A\u0442\u043E\u0440 \u041E\u0442\u0447\u0435\u0442\u043E\u0432
 
