--- a/lecm-model-editor/repo/src/main/config/messages/forms-editor_ru.properties
+++ b/lecm-model-editor/repo/src/main/config/messages/forms-editor_ru.properties
@@ -1,4 +1,5 @@
 lecm-forms-editor_model.type.lecm-forms-editor_form.title=\u0424\u043E\u0440\u043C\u0430
+lecm-forms-editor_model.property.lecm-forms-editor_form-evaluator.title=Evaluator
 lecm-forms-editor_model.property.lecm-forms-editor_form-id.title=\u0422\u0438\u043F \u0444\u043E\u0440\u043C\u044B
 lecm-forms-editor_model.property.lecm-forms-editor_form-template.title=\u041F\u0440\u0430\u0432\u0438\u043B\u0430 \u0440\u0430\u0441\u043F\u043E\u043B\u043E\u0436\u0435\u043D\u0438\u044F \u043F\u043E\u043B\u0435\u0439
 
