--- a/lecm-documents/repo/src/main/config/messages/lecm-documents_ru.properties
+++ b/lecm-documents/repo/src/main/config/messages/lecm-documents_ru.properties
@@ -28,8 +28,8 @@ lecm-doc-members_model.association.lecm-doc-members_employee-assoc.description=\
 
 lecm-document_model.type.lecm-document_tableDataRow.title=\u0422\u0430\u0431\u043B\u0438\u0447\u043D\u0430\u044F \u0437\u0430\u043F\u0438\u0441\u044C
 lecm-document_model.type.lecm-document_tableDataRow.description=\u0422\u0430\u0431\u043B\u0438\u0447\u043D\u0430\u044F \u0437\u0430\u043F\u0438\u0441\u044C
-lecm-document_model.property.lecm-document_indexTableRow.title=\u0418\u043D\u0434\u0435\u043A\u0441
-lecm-document_model.property.lecm-document_indexTableRow.description=\u0418\u043D\u0434\u0435\u043A\u0441
+lecm-document_model.property.lecm-document_indexTableRow.title=\u041D\u043E\u043C\u0435\u0440
+lecm-document_model.property.lecm-document_indexTableRow.description=\u041D\u043E\u043C\u0435\u0440
 
 statemachine.state.privileges.INITIATOR=\u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440
 statemachine.state.privileges.CORRECTOR=\u041A\u043E\u0440\u0440\u0435\u043A\u0442\u043E\u0440
